--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "src/main.js",
   "dependencies": {
+    "backbone": "^1.3.3",
+    "d3": "^3.0.0",
+    "jquery": "^3.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
