--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "molecular-visualization",
   "version": "0.0.1",
   "description": "",
-  "main": "src/main.js",
+  "main": "dist/bundle.js",
   "dependencies": {
     "backbone": "^1.3.3",
     "d3": "^3.0.0",
@@ -32,8 +32,8 @@
   },
   "scripts": {
     "test": "karma start",
-    "build": "webpack --config webpack.config.js",
-    "serve": "webpack-dev-server --content-base example/ --config webpack.config.js --progress --colors"
+    "build": "webpack -p --config webpack.config.js",
+    "serve": "webpack-dev-server --content-base example/ --config example/webpack.config.js --progress --colors"
   },
   "author": "Autodesk Bio/Nano",
   "license": "Apache 2.0"
