--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^3.6.0",
     "phantomjs-prebuilt": "^2.1.7",
     "sass-loader": "^3.2.0",
+    "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.0",
     "webpack-dev-server": "^1.14.1"
