--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
-  "name": "molecular-visualization",
+  "name": "nbmolviz2d",
   "version": "0.0.1",
-  "description": "",
+  "description": "2D molecule visualization",
   "main": "dist/bundle.js",
+  "keywords": [
+    "molecule",
+    "visualization",
+    "d3",
+    "2d"
+  ],
   "dependencies": {
     "backbone": "^1.3.3",
     "d3": "^3.0.0",
@@ -38,5 +44,9 @@
     "example": "webpack-dev-server --content-base example/ --config example/webpack.config.js --progress --colors"
   },
   "author": "Autodesk Bio/Nano",
-  "license": "Apache 2.0"
+  "license": "Apache 2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Autodesk/nbmolviz2d.git"
+  },
 }
