Upgrade d3 to v4 This is a squash of several commits due to bad git fu :( Expect atom color as a color string Use bipyridine in the example

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,9 @@
 {
   "extends": "airbnb",
   "rules": {
+    // These rules are violated by normal d3 usage
+    "no-underscore-dangle": 0,
+    "no-param-reassign": 0,
     "react/jsx-no-bind": 0,
   },
 }
