--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "node-sass": "^3.9.3",
     "phantomjs-prebuilt": "^2.1.7",
     "sass-loader": "^4.0.2",
-    "selenium-binaries": "^0.8.0",
+    "selenium-binaries": "0.8.0",
     "sinon": "^2.0.0-pre.2",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.2",
