--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "backbone": "^1.3.3",
     "d3": "^4.1.1",
-    "jquery": "^3.1.0"
+    "jquery": "^3.1.0",
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-latest": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.5.0",
