--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "babel-core": "^6.7.7",
     "babel-loader": "^6.2.4",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-latest": "^6.14.0",
     "babel-preset-react": "^6.11.1",
