--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,11 @@
 {
   "extends": "airbnb",
   "rules": {
+    "react/no-unused-prop-types": 1,
     // These rules are violated by normal d3 usage
-    "no-underscore-dangle": 0,
-    "no-param-reassign": 0,
-    "react/jsx-no-bind": 0,
+    "no-underscore-dangle": 1,
+    "no-param-reassign": 1,
+    "react/jsx-no-bind": 1,
   },
   "globals": {
     "window": true,
