--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "no-param-reassign": 1,
     "react/jsx-no-bind": 1,
   },
+  "parser": "babel-eslint",
   "globals": {
     "window": true,
     "document": true,
