--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
+    "babel-eslint": "^7.0.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-es2016": "^6.16.0",
     "babel-preset-es2017": "^6.16.0",
     "babel-preset-react": "^6.11.1",
+    "babel-preset-stage-2": "^6.17.0",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
     "eslint": "^3.5.0",
@@ -32,7 +34,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-import": "^1.15.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-react": "^6.4.1",
     "inline-environment-variables-webpack-plugin": "^1.1.0",
     "karma": "^0.13.22",
     "karma-mocha": "^0.2.2",
